plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.4-M1'
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

group = 'net.im45.bot'
version = '0.2.6'

repositories {
    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
    maven { url 'https://mirrors.huaweicloud.com/repository/maven' }
    mavenCentral()
    jcenter()
}

dependencies {
    compileOnly 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
    compileOnly 'net.mamoe:mirai-core:1.0.0'
    compileOnly 'net.mamoe:mirai-console:0.5.2'
    compileOnly 'com.google.code.gson:gson:2.8.6'
}

compileKotlin {
    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
}
compileTestKotlin {
    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_11
